dropshot/tests/fail/bad_server_only12.stderr
error: expected a string, but found `123`
  --> tests/fail/bad_server_only12.rs:10:32
   |
10 | #[dropshot::server { context = 123 }]
   |                                ^^^
